2008-04-07  0.40 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Implemented getline_hr () and column_names () RT 34474
	  (suggestions accepted from Mark Stosberg)
	* Corrected misspelled variable names in XS
	* Functions are now =head2 type doc entries (Mark Stosberg)
	* Make SetDiag() available to the perl level, so errors can
	  be centralized and consistent
	* Integrate the non-XS errors into XS
	* Add t/75_hashref.t
	* Testcase for error 2023 (Michael P Randall)
	* Completely refactored the XS part of parse/getline, which
	  is now up to 6% faster. YMMV
	* Completed bind_columns. On straight fetches now up to three
	  times as fast as normal fetches (both using getline ())

2008-03-11  0.37 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Copied GIT repo to public mirror
	* Fix leak / make meta info available to getline () + tests

2008-03-06  0.36 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Updated ppport.h
	* auto-load IO::Handle when needed
	* Tested with all available perl builds, including a fresh
	  threaded 5.11 (blead)

2008-03-01  0.35 (Valloire) - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* use warnings/$^W = 1
	* Tested on 5.10.0, 5.8.8, 5.6.2, and 5.005_04, Strawberry and Cygwin
	* Diagnostics for failed new ()
	* New 'blank_is_undef' option
	* Updated docs
	* Extended the DIAGNOSTICS a bit
	* Updated TODO
	* Fixed allow_whitespace issue, revealed by blank_is_undef
	* Re-enabled some tests
	* Fixed parse error that passed for q{1, "bar",2} with escape_char +
	* Reversed an erroneous test result in the funny combo section
	* Extended diagnostics tests
	* Extended XS coverage
	* Removed error 2033

2008-01-04  0.34 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* No change, but 0.33 was shipped with an old META.yml

2008-01-02  0.33 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Text-CSV_XS now under git
	* Upped copyright to 2008
	* Added all prereq's to Makefile.PL
	* Tested under perl 5.10

2007-10-24  0.32 - H.Merijn Brand   <h.m.brand@xs4all.nl>
